fix: Increase restaurant title weight on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,7 @@ nav h1 a {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 2rem;
-  font-weight: 200;
+  font-weight: 300;
   letter-spacing: 0;
   margin: 15px 0 30px;
   text-transform: uppercase;
